--- a/front-end/package.json
+++ b/front-end/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-radio-group": "^1.1.3",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.5",
     "@tanstack/react-table": "^8.11.2",
     "axios": "^1.6.3",
     "class-variance-authority": "^0.7.0",
